--- a/.github/workflows/MergeToMain.yml
+++ b/.github/workflows/MergeToMain.yml
@@ -17,8 +17,8 @@ env:
   DOTNET_NOLOGO: true
 
 jobs:
-  build_and_create_a_nuget:
-    name: Build and create a NuGet (RELEASE)
+  build_and_test:
+    name: Build and Test (RELEASE)
     runs-on: ubuntu-latest
 
     steps:
@@ -35,26 +35,11 @@ jobs:
 
       - run: dotnet restore --verbosity minimal
 
-      - run: dotnet build --configuration Release -p:ContinuousIntegrationBuild=true -p:DebugType=Embedded -p:VersionPrefix=$VERSION_PREFIX --version-suffix $VERSION_SUFFIX
+      - run: dotnet build --configuration Release -p:ContinuousIntegrationBuild=true -p:VersionPrefix=$VERSION_PREFIX --version-suffix $VERSION_SUFFIX
 
       - run: dotnet test --configuration Release --no-build
-
-      - run: dotnet pack --configuration Release --no-build --output ./artifacts -p:DebugType=Embedded -p:VersionPrefix=$VERSION_PREFIX --version-suffix $VERSION_SUFFIX
-
-      - name: Publish artifacts
-        uses: actions/upload-artifact@v5
-        with:
-          name: NuGetPackage.${{ env.VERSION_PREFIX }}-${{ env.VERSION_SUFFIX }}
-          path: ./artifacts/
-
-      - name: Publish to GPR
-        run: |
-          dotnet nuget push "./artifacts/*.nupkg" \
-            --no-symbols \
-            --api-key ${{ secrets.GITHUB_TOKEN }} \
-            --source https://nuget.pkg.github.com/${{ github.repository_owner }}
             
-  test:
+  build_and_test_with_code_coverage:
     name: Build and Test with CodeCov (DEBUG)
     runs-on: ubuntu-latest
 
